staticfiles/stylesheets/style.css
@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
body {
  position: relative;
  padding: 0 32px;
  background: linear-gradient(to right, #759eb8, #226f54);
  min-height: 100vh;
  overflow-x: hidden;
  overflow-y: auto;
  animation: fadeInAnimation ease 2s;
  animation-iteration-count: 1;
  animation-fill-mode: forwards;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin: 32px 64px 32px 64px;
}

.header .logo-link {
  width: 40%;
}
.header .logo-link .big-logo {
  width: 100%;
}

.header .socials {
  margin-right: 10%;
  display: flex;
  justify-content: space-evenly;
  width: 30%;
}

.header .image-link-cont {
  display: flex;
  align-self: center;
}

.image-link {
  width: 40px;
  object-fit: cover;
}

.image-link:hover {
  transform: scale(1.1);
}

.main {
  padding-bottom: 2.5rem;
}

button {
  display: block;
  margin-left: auto;
  margin-right: auto;
  border: 0;
}

button .auth-link {
  text-decoration: none;
}

.main-butt {
  cursor: pointer;
  font-family: "Montserrat";
  font-size: 20px;
  font-weight: 950;
  position: center;
  overflow: hidden;
  top: 40%;
  width: 150px;
  perspective: 200px;
  background-color: transparent;
  -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(rgba(255, 255, 255, 0.3)));
}

.main-butt span {
  display: block;
  position: relative;
  transition: 0.3s ease-in-out all;
  transform-origin: 50% 0;
  transform-style: preserve-3d;
  border: solid 1px #ff8630;
  color: #ff8630;
  width: 100%;
}

.main-butt span:after {
  display: block;
  content: attr(data-title);
  position: absolute;
  left: 0;
  top: 0;
  transition: 0.3s ease-in-out all;
  transform-origin: 50% 0;
  transform: translate3d(0px, 105%, 0px) rotateX(-90deg);
  border: solid 1px #ff8630;
  color: #ff8630;
  width: 100%;
}

.main-butt:hover span {
  transform: scale(1.5);
  transform: translate3d(0px, 0px, -40px) rotateX(90deg);
}

.disclaimer {
  font-family: "Raleway";
  color: #ff8630;
  font-size: smaller;
  padding-left: 32px;
}

#log-out {
  cursor: pointer;
  padding-bottom: 32px;
}

.text-info {
  padding: 0px 32px;
  transition-timing-function: ease-in;
  font-family: "Raleway";
  color: #f4f0bb;
  font-size: larger;
  font-weight: 900;
}

.nar1 p {
  line-height: 1.8;
}

.text-info .bold {
  font-size: x-large;
  font-weight: bold;
  text-decoration: underline;
}

#no-under {
  text-decoration: none;
}

#nar2 p {
  line-height: 1;
}

.genre-info {
  padding: 0px 32px;
  transition-timing-function: ease-in;
  font-family: "Raleway";
  color: #f4f0bb;
  font-size: larger;
  font-weight: 900;
  animation: fadeInAnimation ease-in 4s;
}

.genre-table tbody {
  display: flex;
  flex-direction: row;
  align-content: space-between;
  flex-wrap: wrap;
}

.num-dec {
  color: #ff8630;
  font-size: x-large;
}

tr .numbers {
  cursor: pointer;
  display: none;
}

tr:hover .perc {
  cursor: pointer;
  display: none;
}

tr:hover .numbers {
  position: relative;
  cursor: pointer;
  display: inline;
}

/*# sourceMappingURL=style.css.map */

